2015-05-09 Roman
- !!:FIX:Archiver.FSArch: Removing *.info files for different pack mode is fixed.
    Tab "Files" is added for the messages and the values with information about the archive's files.
- FIX:UI.WebCfgD: Title's null value fix for helps.
- SYS: *.spec: Field "Release" set to template rNNNN.
- DB: DB object's fields "DESCR" and "ADDR" size rose to 2000 and 1000, respectively.
- !!:FIX:Archiver.FSArch: Free storage space lack checking added for prevent hang and data lost for messages and values.
- FIX:DB.SQLite: Adapted to the keys description as the key position number.
- DAQ.{DCON,ICP_DAS,ModBus}: Error messages expanded to addition different errors per tries.
- Transport.Serial: Some expanded by debug messages and the minuteness.
- UI.QTCfg: List element expanded horizontal to all page, for wide items.


2015-05-06 Roman
- UI.Vision: Default exporting set for the big (not lesser twice to main page) and the single documents or the diagram.


2015-05-05 Roman
- Protocol.SelfSystem: Expanded by status - Active authentication sessions.
- SYS: {debian,debian_mod}/control: Depends for build with Qt5 is added.
- !!:BD.ODBC: The build dependencies checking is added to configure, by new macros AX_LIB_IODBC and iodbc-config.
    Transactions generic processing and the tables list getting added.
    Generic, ODBC internal, requests "tables", "qualifiers", "owners", "datatypes" to generic sqlReq() function is added.
- FIX:BD.PostgreSQL: The build dependencies checking macros AX_LIB_POSTGRESQL some fixed for the results.
- !!:DB: LibsDB.vcaBase.db: All left widgets of the widgets library "Main" moved to the dynamic translation by function tr().
    Widget's "grpCadr", "cntrRegul", "ResultGraph", "doc_panel", "cntrPasp" code significant cleaned and refactored.
- FIX:DAQ.JavaLikeCalc: Equal and NotEqual the virtual machine functions adjusted for undefined object's properties correct
    processing by the processing generic as Real for not String types.